compiler/tools/fpp-check/test/redef_module_port.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/redef_module_port.fpp: 2.1
port P
^
error: redefinition of symbol P
previous definition was here:
[ local path prefix ]/compiler/tools/fpp-check/test/redef_module_port.fpp: 1.1
module P { }
^
